Migrated deprecated configuration settings to recommended ones and fixed test_unit config

--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,7 @@ test:
   adapter: sqlite3
   pool: 5
   timeout: 5000
-  database: simplecrowd_test
+  database: test/simplecrowd_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
