--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,6 @@
     "scrollReveal.js": "~2.1.0",
     "tinymce": "~4.1.7",
     "bootstrap-hover-dropdown": "~2.1.3",
-    "enquire": "~2.1.2",
-    "x-editable": "~1.5.1"
+    "enquire": "~2.1.2"
   }
 }
