--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "author": "leob",
   "license": "ISC",
   "devDependencies": {
-    "matchdep": "~0.3.0",
     "grunt": "~0.4.4",
     "grunt-contrib-compress": "v0.12.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.10.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "~0.17.0",
-    "grunt-contrib-cssmin": "~0.10.0"
+    "grunt-sass": "https://registry.npmjs.org/grunt-sass/-/grunt-sass-0.16.1.tgz",
+    "matchdep": "~0.3.0"
   }
 }
